--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
     "mysql2": "^3.14.0",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
